<resources>
    <string name="app_name">DroidFeed</string>
    w
    <string name="app_version">v%1$s</string>

    <string name="error_invalid_article_url">Article URL is invalid</string>
    <string name="error_empty_email">Please put your email address</string>
    <string name="error_email_format">Please enter a valid email address</string>
    <string name="error_api_generic">API call failed, please try again later</string>
    <string name="error_internet_or_url">Is your device connected to the internet?</string>
    <string name="error_cannot_obtain_sources">Can not obtain the news sources. Please try again later.</string>
    <string name="error_add_source">Failed to add. Make sure the feed format is valid.</string>
    <string name="error_invalid_url">The url is not valid.</string>

    <string name="nav_home">Home</string>
    <string name="nav_feed">Feed</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_title_about">About</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_title_contribute">Contribute</string>
    <string name="nav_title_newsletter">Newsletter</string>

    <string name="send_email">Send email</string>
    <string name="about_page_copy">Your hub for the latest Android Development news and thoughts.</string>

    <string name="info_no_internet">Internet connection is not available</string>
    <string name="info_bookmark_removed">Bookmark is removed</string>
    <string name="info_source_removed">Feed source is removed</string>

    <string name="can_not_refresh">Can\'t refresh.</string>

    <string name="content_desc_share_button">Share button</string>
    <string name="content_desc_bookmark_button">Bookmark button</string>

    <string name="error_obtaining_feed">Couldn\'t retrieve the feed!</string>

    <string name="title_contribution_invite">You are invited to be a contributor.</string>
    <string name="help_us_desc">Join us to advance DroidFeed\'s mission of empowering Android developer.\n\nDroidFeed is an open source app, and you can improve it any time.\n\nCheck out our GitHub page to see how you can contribute.
  </string>
    <string name="send_feedback">Send Feedback</string>
    <string name="undo">Undo</string>
    <string name="view_on_github">View on Github</string>
    <string name="filter">Filter</string>
    <string name="sources">Sources</string>
    <string name="libraries_desc">DroidFeed is made with the awesome libraries listed below.</string>
    <string name="later">Later</string>
    <string name="never_show">Never show</string>
    <string name="sure">Sure</string>
    <string name="share">Share</string>
    <string name="share_app">Share this App</string>
    <string name="rate_app">Rate the App</string>
    <string name="contact_us">Contact Us</string>
    <string name="licences">Licences</string>
    <string name="publisher_time">%1$s &#8226; %2$s</string>
    <string name="send_with">Send with</string>
    <string name="yes">Yes</string>

    <string name="newsletter_headline">Become a better developer with our newsletter.</string>
    <string name="newsletter_desc1">Sent out weekly. No spam ever.</string>
    <string name="newsletter_desc2">Top news, articles, podcasts, and job postings delivered to your inbox.
</string>
    <string name="newsletter_email_exist">You are already a subscriber. See you in your inbox.</string>
    <string name="newsletter_subscribed">Successfully subscribed!\nSee you in your inbox.</string>

    <string name="empty_screen_bookmark">You haven\'t bookmarked anything yet.</string>

    <string name="empty_source_title">Uh oh! There’s no post\nbecause no source is selected.</string>
    <string name="empty_source_content">Click on the filter icon at the top right\ncorner to select sources.</string>
    <string name="empty_bookmark_title">Hi! Your bookmarked posts\nwill show up here.</string>

    <string name="dialog_rate_app">Thanks! Would you like to review us on Google Play?</string>
    <string name="like_to_review_df">Would you like to review DroidFeed on Google Play?</string>
    <string name="your_email">Your e-mail</string>
    <string name="sign_me_up">Sign Me Up</string>
    <string name="legal">Legal</string>
    <string name="action_continue">Continue</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="i_agree_to">I agree to the %1$s</string>
    <string name="previous_issues">Want to see previous issues? %1$s</string>
    <string name="see_here">See here.</string>


    <string name="content_article_image">image of the article</string>
    <string name="content_app_logo">DroidFeed logo</string>
    <string name="info_subs_confirmed">Thanks! Please check your inbox for a confirmation.</string>
    <string name="licence">Licence</string>
    <string name="content_desc_back_button">Back navigation button</string>
    <string name="empty_string" />
    <string name="cfp_deadline">CFP until %1$s</string>
    <string name="nav_title_conferences">Conferences</string>
    <string name="feed_url">RSS/Atom feed url</string>
    <string name="add">add</string>
    <string name="error_source_exists">This feed already exists.</string>
    <string name="error_empty_source_url">Please enter a feed url</string>
    <string name="remove">Remove</string>
</resources>
