<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.droidfeed.ui.module.about.AboutViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pink">

        <TextView
            android:id="@+id/textView"
            style="@style/DF.ButtonRowDark"
            android:onClick="@{()->viewModel.openLibraries()}"
            android:text="@string/libraries_used"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            style="@style/DF.ButtonRowDark"
            android:onClick="@{()->viewModel.contactEmail()}"
            android:text="@string/contact_us"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView9"
            style="@style/DF.ButtonRowDark"
            android:onClick="@{()->viewModel.shareApp()}"
            android:text="@string/share_app"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            style="@style/DF.ButtonRowDark"
            android:onClick="@{()->viewModel.openPlayStore()}"
            android:text="@string/rate_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            style="@style/DF.ButtonRowDark"
            android:onClick="@{()->viewModel.openPrivacyPolicy()}"
            android:text="@string/privacy_policy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/txtAppVersion"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="v2.0" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="32dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:lottie_rawRes="@raw/notebook_anim"
            tools:src="@drawable/ic_cat" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>