<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="rssItem"
      type="com.droidfeed.data.model.Post" />

    <variable
      name="articleClickListener"
      type="com.droidfeed.ui.module.feed.ArticleClickListener" />

  </data>

  <androidx.cardview.widget.CardView
    style="@style/CardStyle"
    android:onClick="@{()->articleClickListener.onItemClick(rssItem)}"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        android:id="@+id/txtTitle"
        style="@style/NewsTitleTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@{rssItem.title}"
        app:layout_constraintEnd_toStartOf="@+id/imgArticle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginEnd="16dp"
        tools:text="This Is A Click Bait Title of A News That Is About To Get So Long to Test What Is Going to Happen If The Title Is Long" />

      <TextView
        android:id="@+id/txtSource"
        style="@style/NewsSourceTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@{rssItem.channel.title}"
        app:layout_constraintEnd_toStartOf="@+id/imgBookmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        tools:text="Source" />

      <TextView
        android:id="@+id/txtDate"
        style="@style/TextAppearance.AppCompat.Caption"
        relativeDate="@{rssItem.pubDateTimestamp}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtTitle"
        app:layout_goneMarginBottom="8dp"
        tools:text="3 hours ago" />

      <ImageView
        android:id="@+id/imgArticle"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/content_article_image" />

      <ImageView
        android:id="@+id/imgShare"
        style="BorderlessImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_small"
        android:adjustViewBounds="false"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/content_desc_share_button"
        android:cropToPadding="false"
        android:onClick="@{()->articleClickListener.onShareClick(rssItem)}"
        android:scaleType="centerInside"
        android:src="@drawable/ic_share_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgArticle" />

      <ImageView
        android:id="@+id/imgBookmark"
        style="BorderlessImageButton"
        avdImageResource="@{rssItem.bookmarkObservable}"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:adjustViewBounds="false"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/content_desc_bookmark_button"
        android:cropToPadding="false"
        android:onClick="@{()->articleClickListener.onBookmarkClick(rssItem)}"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/imgShare"
        app:layout_constraintTop_toTopOf="@+id/imgShare"
        tools:src="@drawable/ic_bookmark_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.cardview.widget.CardView>

</layout>