<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="post"
            type="com.droidfeed.data.model.Post" />

        <variable
            name="postClickListener"
            type="com.droidfeed.ui.module.feed.PostClickListener" />

    </data>

    <com.google.android.material.card.MaterialCardView
        style="@style/CardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{()->postClickListener.onItemClick(post)}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_shape">

            <TextView
                android:id="@+id/txtTitle"
                style="@style/DF.TitleStyleLight.List"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@{post.title}"
                app:layout_constraintEnd_toStartOf="@+id/imgPost"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginEnd="16dp"
                tools:text="This Is A Click Bait Title of A News That Is About To Get So Long to Test What Is Going to Happen If The Title Is Long" />

            <TextView
                android:id="@+id/txtDate"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/imgBookmark"
                app:layout_constraintEnd_toStartOf="@+id/imgPost"
                app:layout_constraintStart_toStartOf="@+id/txtTitle"
                app:layout_constraintTop_toTopOf="@+id/imgBookmark"
                app:layout_goneMarginBottom="8dp"
                app:publisher="@{post.channel.title}"
                app:timestamp="@{post.pubDateTimestamp}"
                tools:text="Publisher - 3 hours ago" />

            <ImageView
                android:id="@+id/imgPost"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="@dimen/card_border_width"
                android:layout_marginEnd="@dimen/card_border_width"
                android:contentDescription="@string/content_article_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@mipmap/ic_launcher" />

            <View
                android:id="@+id/imgContentType"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/ic_content_video"
                android:contentDescription="@string/content_article_image"
                app:isVisible="@{post.isVideoContent}"
                app:layout_constraintBottom_toBottomOf="@+id/imgPost"
                app:layout_constraintEnd_toEndOf="@+id/imgPost"
                app:layout_constraintStart_toStartOf="@+id/imgPost"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgShare"
                style="@style/BorderlessImageButton"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="@dimen/spacing_small"
                android:contentDescription="@string/content_desc_share_button"
                android:onClick="@{()->postClickListener.onShareClick(post)}"
                android:src="@drawable/ic_share_accent_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgPost" />

            <ImageView
                android:id="@+id/imgBookmark"
                style="@style/BorderlessImageButton"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/content_desc_bookmark_button"
                android:onClick="@{()->postClickListener.onBookmarkClick(post)}"
                app:avdImageResource="@{post.bookmarkObservable}"
                app:layout_constraintEnd_toStartOf="@+id/imgShare"
                app:layout_constraintTop_toTopOf="@+id/imgShare"
                tools:src="@drawable/ic_bookmark_accent_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>